--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,14 @@ defaultTasks 'run'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 def generatedSourcesPath = "src/main/generated"
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-serialization-runtime
+//    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.11.1-1.3.40-eap-67-2'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     // https://mvnrepository.com/artifact/com.github.gumtreediff/core
     compile group: 'com.github.gumtreediff', name: 'core', version: '2.1.0'
@@ -39,9 +42,9 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = "4.10.2"
-}
+//task wrapper(type: Wrapper) {
+//    gradleVersion = "4.10.2"
+//}
 
 task processPyExample(type: JavaExec) {
     main = 'miningtool.examples.pyExample.PyExample'
